--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@import "src/app/styles/mixins/styles.scss";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  height: 100%;
+  background-color: $background;
+}
+
+button {
+  cursor: pointer;
+  background-color: $blue;
+
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
