creating nav bar component style

--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <nav class="nav-bar">
     <header class="nav-bar__header">File Uploader</header>
     <section class="nav-bar__links">
-      <a href="#">Files</a>
+      <a href="#">Logout</a>
     </section>
   </nav>
 </section>
