--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -27,11 +27,11 @@
 
     a {
       text-decoration: none;
-      color: #cdc6ae;
+      color: #fff;
     }
 
     a:hover {
-      border-bottom: 1px solid #cdc6ae;
+      border-bottom: 2px solid #fff;
     }
   }
 }
