--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,15 +1,9 @@
 <section class="auth-container">
   <button
-    *ngIf="!(isLoggedIn$ | async); else loggedOut"
+    *ngIf="!(isLoggedIn$ | async)"
     class="auth-container__login-btn"
     (click)="logIn()"
   >
     Log In
   </button>
-
-  <ng-template #loggedOut>
-    <button class="login-container__login-btn" (click)="logOut()">
-      Log Out
-    </button>
-  </ng-template>
 </section>
