adding unit tests

--- a/src/app/home/components/file-item/file-item.component.html
+++ b/src/app/home/components/file-item/file-item.component.html
@@ -1,4 +1,8 @@
-<div class="file-item__container">
-  <div class="file-item__title"><span>Title:</span> {{ title }}</div>
-  <div class="file-item__size"><span>Size:</span> {{ size }}MB</div>
+<div class="file-item__container" data-test="file-item-container">
+  <div class="file-item__title" data-test="file-item-title">
+    <span>Title:</span> {{ title }}
+  </div>
+  <div class="file-item__size" data-test="file-item-size">
+    <span>Size:</span> {{ size }}MB
+  </div>
 </div>
