--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<section class="container" mouseMove [isActive]="isLoggedIn$ | async">
+<section class="container" mouseClick [isActive]="vm$ | async">
   <nav class="nav-bar">
     <header class="nav-bar__header">File Uploader</header>
     <section class="nav-bar__links">
