--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,8 @@
 @import "src/app/styles/mixins/styles.scss";
 
 .home-container {
-  margin: 0rem 4rem;
-  margin-top: 5rem;
+  margin: 1rem 4rem;
+  height: 100%;
 
   &__header {
     margin-bottom: 1rem;
